--- a/public/css/main.less
+++ b/public/css/main.less
@@ -143,7 +143,7 @@ ul {
   margin-top: -60px;
   padding: 10em 2em;
   background: #333;
-  background-image: url('http://placehold.it/1900x500');
+  background-image: url('http://res.cloudinary.com/hvijrq2ex/image/upload/v1429541112/Profile_3_vdifnr.png');
   background-size: cover;
   background-position: top center;
   text-align: center;
