--- a/public/css/lib/bootstrap/modals.less
+++ b/public/css/lib/bootstrap/modals.less
@@ -95,6 +95,7 @@
 // Where all modal content resides (sibling of .modal-header and .modal-footer)
 .modal-body {
   position: relative;
+  background: white;
   padding: @modal-inner-padding;
 }
 
