--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,9 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='csrf-token', content=_csrf)
+
+    meta(name="google-translate-customization" content="36f69ed9faaa7941-703915e1eeada43a-g1dccdfe54240d9f5-20")
+
     title #{title || '404'} - Wayfairer
     != css('main')
   body
