--- a/public/css/main.less
+++ b/public/css/main.less
@@ -20,8 +20,6 @@ body {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 45px;
   line-height: 45px;
@@ -82,7 +80,7 @@ ul {
 // Navbar
 // -------------------------
 
-.navbar-nav img {
+.navbar-nav .navbar-img {
   width: 30px;
   height: 30px;
   margin: -15px 15px -15px;
@@ -106,6 +104,18 @@ ul {
     font-size: 28px;
     margin-right: 20px;
   }
+}
+
+#google_translate_element {
+  margin-top: 14px;
+}
+
+.goog-te-gadget-icon {
+  display: none;
+}
+
+.goog-te-banner-frame {
+  display: none;
 }
 
 
@@ -143,7 +153,7 @@ ul {
   margin-top: -60px;
   padding: 10em 2em;
   background: #333;
-  background-image: url('http://res.cloudinary.com/hvijrq2ex/image/upload/v1429541112/Profile_3_vdifnr.png');
+  background-image: url('http://placehold.it/1900x500');
   background-size: cover;
   background-position: top center;
   text-align: center;
@@ -216,4 +226,16 @@ ul {
     font-size: @text-size-m;
   }
 
+}
+
+
+// Modal
+// -------------------------
+.modal {
+  background: rgba(0, 0, 0, 0.5);
+
+  .modal-header {
+    border:0;
+    border-radius: 0;
+  }
 }
