--- a/public/css/main.less
+++ b/public/css/main.less
@@ -4,6 +4,23 @@
 @import "lib/ionicons/ionicons";
 @import "themes/modern";
 
+
+@media (min-width: @screen-sm-min) {
+.pull-right-sm {
+  float: right;
+}
+}
+@media (min-width: @screen-md-min) {
+.pull-right-md {
+  float: right;
+}
+}
+@media (min-width: @screen-lg-min) {
+.pull-right-lg {
+  float: right;
+}
+}
+
 // Scaffolding
 // -------------------------
 
@@ -14,7 +31,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 50px;
   margin-bottom: 75px;
   background: #f5f5f5;
 }
@@ -44,6 +61,9 @@ h3, .h3 {
   }
 }
 
+p {
+  line-height: 1.3em;
+}
 
 .float-left {
   float: left;
@@ -150,12 +170,11 @@ ul {
 .hero {
   width: 130%;
   margin-left: -15%;
-  margin-top: -60px;
   padding: 10em 2em;
   background: #333;
-  background-image: url('http://placehold.it/1900x500');
+  background-image: url('http://www.noaanews.noaa.gov/stories2012/images/canoeforfirststewardspr.jpg');
   background-size: cover;
-  background-position: top center;
+  background-position: center center;
   text-align: center;
 
 
@@ -184,22 +203,23 @@ ul {
 .activity-card {
   display: block;
   width:100%;
-  padding: 3em;
+  min-height: 200px;
+  padding: 2em 3em;
   
-  background: @gray;
+  background-color: @gray;
   background-image: url('http://placehold.it/1900x500');
-  background-size: cover;
-  background-position: top center;
+  background-size: cover!important;
+  background-position: top center!important;
 
-  text-align: center;
+  text-align: left;
 
   .activity-card--title {
+    transition: all .4s cubic-bezier(.24,.45,.46,.92);
     font-family: @font-stylized;
     color: #fff;
   }
 
   &:hover {
-    background: darken(@gray, 5%);
 
     .activity-card--title {
       color: @brand-primary;
