--- a/views/partials/welcome.jade
+++ b/views/partials/welcome.jade
@@ -1,4 +1,4 @@
-if user
+if user && user.isTourGuide
   if (!user.profile.name || !user.profile.bio)
     .alert.alert-success.fade.in
       p.lead Welcome to wayfairer! You will want to complete your public profile before listing an experience.
@@ -6,3 +6,4 @@ if user
       a.btn.btn.btn-primary(href='/profile')
         span.ion-edit
         | Update Public Profile
+      div.clearfix
