--- a/views/activity/new.jade
+++ b/views/activity/new.jade
@@ -5,16 +5,21 @@ block content
     h3 List New Experience
 
 
-  form.form-horizontal.form--activity(role='form', method='POST', action='/experience/new')
+  form.form-horizontal.form--activity(role='form', method='POST', action='/experience/new' enctype='multipart/form-data')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group
       label(class='col-sm-2 control-label', for='title') Title*
       .col-sm-8
         input.form-control(type='text', name='title', id='title', placeholder='e.g. Traditional Afro-Caribbean Cooking' autofocus=true required)
-    .form-group
+    //.form-group
       label(class='col-sm-2 control-label', for='image') Image URL*
       .col-sm-8
         input.form-control(type='text', name='image', id='image', placeholder='e.g. http://placehold.it/1900x600')
+    .form-group
+      label(class='col-sm-2 control-label', for='image') Image
+      .col-sm-8
+        input.form-control(type='file', name='image', id='image')
+    
     .form-group
       label(class='col-sm-2 control-label', for='strapline') Strapline*
       .col-sm-8
