--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -45,7 +45,7 @@
           li(class=title=='Login'?'active':undefined)
             a(href='/login') Login
           li(class=title=='Create Account'?'active':undefined)
-            a.navbar-cta(href='/signup') Signup
+            a.navbar-cta(href='/wayfairer-signup') Signup
         else
           li.dropdown(class=title=='Account'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
