--- a/views/activity/all.jade
+++ b/views/activity/all.jade
@@ -19,3 +19,6 @@ block content
 							h3.activity-card--title= activity.title
 
 					br
+	.clearfix
+	p.lead Have something to share? 
+		a(href='/experience/new') List an experience.
