--- a/views/activity/index.jade
+++ b/views/activity/index.jade
@@ -98,7 +98,7 @@ block content
 					if !user
 						// login
 						p You must sign-up &amp; login in order to contact the Culturist
-						a.btn.btn.btn-primary(href='/wayfairer-signup') Register as a Wayfairer
+						a.btn.btn.btn-primary(href='/signup') Register
 						|  or 
 						a.btn.btn.btn-secondary(href='/login') Login
 					else
