--- a/public/css/main.less
+++ b/public/css/main.less
@@ -34,6 +34,8 @@ body {
   padding-top: 50px;
   margin-bottom: 75px;
   background: #f5f5f5;
+  -webkit-font-smoothing: antialiased!important;
+  -moz-osx-font-smoothing: grayscale!important;
 }
 
 footer {
@@ -63,6 +65,13 @@ h3, .h3 {
 
 p {
   line-height: 1.3em;
+}
+
+.row__no-padding {
+  [class*="col-"] {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
 }
 
 .float-left {
@@ -126,17 +135,6 @@ ul {
   }
 }
 
-#google_translate_element {
-  margin-top: 14px;
-}
-
-.goog-te-gadget-icon {
-  display: none;
-}
-
-.goog-te-banner-frame {
-  display: none;
-}
 
 
 // Alerts
@@ -170,9 +168,10 @@ ul {
 .hero {
   width: 130%;
   margin-left: -15%;
-  padding: 10em 2em;
-  background: #333;
-  background-image: url('http://www.noaanews.noaa.gov/stories2012/images/canoeforfirststewardspr.jpg');
+  padding: 13em 2em;
+  margin-top: -50px;
+  background: #1d1d1d;
+  //background-image: url('http://www.noaanews.noaa.gov/stories2012/images/canoeforfirststewardspr.jpg');
   background-size: cover;
   background-position: center center;
   text-align: center;
@@ -258,4 +257,33 @@ ul {
     border:0;
     border-radius: 0;
   }
+}
+
+
+
+
+// Footer
+// -------------------------
+.footer--copyright {
+  height: 46px;
+  line-height: 46px;
+}
+
+// Language Switcher
+// -------------------------
+#google_translate_element {
+  margin: 0 8px 0 0;
+}
+
+.goog-te-gadget-simple {
+  height: 30px;
+  line-height: 26px;
+}
+
+.goog-te-gadget-icon {
+  display: none;
+}
+
+.goog-te-banner-frame {
+  display: none;
 }
