--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,10 +1,17 @@
 footer
 	.container.text-center
 		hr
-		p.pull-left © 2015 Wayfairer.co All Rights Reserved
+		p.pull-left.footer--copyright &copy; 2015 Wayfairer.co All Rights Reserved
 		ul.pull-right.list-inline
+			li
+				div(id="google_translate_element")
+				script.
+					function googleTranslateElementInit() {
+						new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'de,en,es,fr,it,ja,pt,tr,zh-CN,zh-TW', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+					}
+
+				script(type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit")
 			li
 				a(href='/terms') Terms
 			li
 			a(href='/cookies') Cookies
-
