--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -13,39 +13,20 @@
     .collapse.navbar-collapse
       ul.nav.navbar-nav
 
-        if !user
-          li(class=title=='Home'?'active':undefined)
-            a(href='/') Home
-          li(class=title=='How it works'?'active':undefined)
-            a(href='/how-it-works') How it works
-        else
-          if user.isTourGuide
-            li(class=title=='Dashboard'?'active':undefined)
-              a(href='/dashboard') Dashboard
-            li(class=title=='New Experience'?'active':undefined)
-              a(href='/experience/new') List New Experience
-        li(class=title=='All Experiences'?'active':undefined)
+        li(class=title=='All Experiences' ? 'active':undefined)
             a(href='/experiences/all') Explore
-        //li(class=title=='API Examples'?'active':undefined)
-          a(href='/api') API Examples
-        //li(class=title=='Contact'?'active':undefined)
-          a(href='/contact') Contact
+ 
+        li(class=title=='What is Wayfairer?' ? 'active':undefined)
+            a(href='/how-it-works') What is Wayfairer?
+
       ul.nav.navbar-nav.navbar-right
 
-        li
-          div(id="google_translate_element")
-          script.
-            function googleTranslateElementInit() {
-              new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'de,en,es,fr,it,ja,pt,tr,zh-CN,zh-TW', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-            }
-
-          script(type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit")
 
         if !user
           li(class=title=='Login'?'active':undefined)
             a(href='/login') Login
           li(class=title=='Create Account'?'active':undefined)
-            a.navbar-cta(href='/wayfairer-signup') Signup
+            a.navbar-cta(href='/signup') Signup
         else
           li.dropdown(class=title=='Account'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
@@ -58,9 +39,17 @@
               i.caret
             ul.dropdown-menu
               li
+                a(href='/dashboard')
+                  span.ion-person
+                  | Dashboard
+              li
                 a(href='/profile')
                   span.ion-person
                   | Public Profile
+              li
+                a(href='/experience/new')
+                  span.ion-person
+                  | List Experience
               li
                 a(href='/account')
                   span.ion-settings
