--- a/public/css/main.less
+++ b/public/css/main.less
@@ -169,7 +169,7 @@ ul {
   width: 130%;
   margin-left: -15%;
   padding: 13em 2em;
-  margin-top: -50px;
+  //margin-top: -50px;
   background: #1d1d1d;
   //background-image: url('http://www.noaanews.noaa.gov/stories2012/images/canoeforfirststewardspr.jpg');
   background-size: cover;
