--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -40,22 +40,23 @@
             ul.dropdown-menu
               li
                 a(href='/dashboard')
-                  span.ion-person
+                  //span.ion-person
                   | Dashboard
               li
-                a(href='/profile')
-                  span.ion-person
-                  | Public Profile
-              li
                 a(href='/experience/new')
-                  span.ion-person
-                  | List Experience
-              li
-                a(href='/account')
-                  span.ion-settings
-                  | Account Settings
+                  //span.ion-person
+                  | Share Experience
               li.divider
               li
+                a(href='/profile')
+                  //span.ion-person
+                  | Edit Profile
+              li.divider  
+              li
+                a(href='/account')
+                  //span.ion-settings
+                  | Account Settings
+              li
                 a(href='/logout')
-                  span.ion-log-out
+                  //span.ion-log-out
                   |  Logout
