--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -18,7 +18,7 @@ block content
           | Login
         a.btn.btn-link(href='/forgot') Forgot your password?
       hr
-      a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
+      //a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
         i.fa.fa-facebook
         | Sign in with Facebook
 
