--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -60,3 +60,5 @@
                 a(href='/logout')
                   //span.ion-log-out
                   |  Logout
+            //li
+              a(href='/') View Profile
