tests with change

--- a/views/how-it-works.jade
+++ b/views/how-it-works.jade
@@ -4,7 +4,7 @@ block content
   h1 What is Wayfairer?
 
   p.lead
-   | Wayfairer is  a online platform allowing local people to connect with travellers who want to participate in and contribute to the communities they visit.  We aim to empower local people to maintain their cultures, heritage and environment and to take charge of their future.
+   | Wayfairer is an YES online platform allowing local people to connect with travellers who want to participate in and contribute to the communities they visit.  We aim to empower local people to maintain their cultures, heritage and environment and to take charge of their future.
 
   .row
     .col-sm-6
